@@ -118,15 +118,10 @@ printMsCommand <- function(dm) {
 
 msOut2Jsfs <- function(dm, ms.out) {
   .log3("Called .ms.getJSFS()")
-  jsfs <- rep(0,(dm@sampleSizes[1]+1)*(dm@sampleSizes[2]+1))
-  jsfs <- matrix( .C("msFile2jsfs",
-                     as.character(ms.out),
-                     as.integer(dm@sampleSizes[1]),
-                     as.integer(dm@sampleSizes[2]),
-                     res=as.integer(jsfs),
-                     PACKAGE="jaatha")$res,
+  jsfs <- matrix(.Call("msFile2jsfs", ms.out, dm@sampleSizes[1], 
+                       dm@sampleSizes[2], dm@nLoci),
                  dm@sampleSizes[1] + 1 ,
-                 dm@sampleSizes[2] + 1 ,
+                 dm@sampleSizes[2] + 1,
                  byrow=T)
   .log3("Finished .ms.getJSFS()")
   return(jsfs)
